@@ -73,19 +73,21 @@ namespace DDraw
 
         public static DColor FromString(string s)
         {
-            string[] parts = s.Split(',');
-            if (parts.Length == 3 || parts.Length == 4)
+            if (s != null)
             {
-                byte r, g, b, a = 0;;
-                byte.TryParse(parts[0], out r);
-                byte.TryParse(parts[1], out g);
-                byte.TryParse(parts[2], out b);
-                if (parts.Length == 4)
-                    byte.TryParse(parts[3], out a);
-                return new DColor(r, g, b, a);
+                string[] parts = s.Split(',');
+                if (parts.Length == 3 || parts.Length == 4)
+                {
+                    byte r, g, b, a = 0; ;
+                    byte.TryParse(parts[0], out r);
+                    byte.TryParse(parts[1], out g);
+                    byte.TryParse(parts[2], out b);
+                    if (parts.Length == 4)
+                        byte.TryParse(parts[3], out a);
+                    return new DColor(r, g, b, a);
+                }
             }
-            else
-                return DColor.Black;                
+            return DColor.Black;                
         }
 
         public static DColor FromHtml(string s)
