@@ -7,6 +7,7 @@ Workbook 1.1
   - added "show" command line option to show another running instance of workbook if there is one
   - added check for DotNet framework version 2 in installer (and prompt to download if not present)
   - installer sets Inifile->Zoom option to "FitToWidth"
+  - installer sets text color to black
   - improved WFViewer scrollbars (including reduced flickering and not showing when they should not)
   - previews tile horizontally when the previewbar is twice the width (or more) of MaxPreviewWidth
   - autoscroll the previewbar when a drag and drop operation nears the edges
